SERVER-71399 Jumbo chunk flag must be cleared following a chunk split

(cherry picked from commit fb8f9ecd5e32272c8c16101640f394a7621a6a82)